hphp/hack/test/typecheck/async_function_untyped5.php.exp
File "async_function_untyped5.php", line 7, characters 7-8:
This object is of type C2 (Typing[4110])
File "async_function_untyped5.php", line 7, characters 18-19:
It is incompatible with this object of type C1
because some declarations are incompatible.
Read the following to see why:
File "async_function_untyped5.php", line 4, characters 25-25:
This is an object of type Awaitable (result of 'async function')
File "async_function_untyped5.php", line 8, characters 24-26:
It is incompatible with an int
